--- a/ever/pubspec.yaml
+++ b/ever/pubspec.yaml
@@ -46,13 +46,17 @@ dependencies:
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
   path: ^1.8.3
+  isar: ^3.1.0
+  isar_flutter_libs: ^3.1.0
   
   # Utils
   logger: ^2.0.2+1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  isar_generator: ^3.1.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -60,6 +64,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  mockito: ^5.4.0
+  build_runner: ^2.4.13
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
