--- a/ever/pubspec.yaml
+++ b/ever/pubspec.yaml
@@ -47,11 +47,13 @@ dependencies:
   sqflite: ^2.3.2
   path: ^1.8.3
   isar: ^3.1.0
-  isar_flutter_libs: ^3.1.0
+  isar_flutter_libs: ^3.1.0+1
+  synchronized: ^3.1.0
   
   # Utils
   logger: ^2.0.2+1
   http: ^1.3.0
+  meta: ^1.16.0
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +68,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   mockito: ^5.4.0
   build_runner: ^2.4.13
+  path_provider: ^2.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
