--- a/ever/pubspec.yaml
+++ b/ever/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   http: ^1.3.0
   meta: ^1.16.0
   rxdart: ^0.28.0
+  json_annotation: ^4.9.0
 
   # CLI specific
   args: ^2.4.2         # Command line argument parsing
@@ -77,6 +78,7 @@ dev_dependencies:
   mockito: ^5.4.0
   build_runner: ^2.4.13
   path_provider: ^2.1.5
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
